--- a/Snippets_Importing_libraries.ipynb
+++ b/Snippets_Importing_libraries.ipynb
@@ -11,149 +11,73 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "kDn_lVxg3Z2G"
-      },
-      "source": [
-        "# Importing a library that is not in Colaboratory\n",
-        "\n",
-        "To import a library that's not in Colaboratory by default, you can use `!pip install` or `!apt-get install`."
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "GQ18Kd5F3uKe"
-      },
-      "outputs": [],
       "source": [
-        "!pip install matplotlib-venn"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "__3eqm3q3sr-"
-      },
-      "outputs": [],
-      "source": [
-        "!apt-get -qq install -y libfluidsynth1"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "apoRbfWsRZ7S"
-      },
-      "source": [
-        "# Install 7zip reader [libarchive](https://pypi.python.org/pypi/libarchive)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "d_j7nNbKRmhx"
-      },
-      "outputs": [],
-      "source": [
-        "# https://pypi.python.org/pypi/libarchive\n",
-        "!apt-get -qq install -y libarchive-dev && pip install -U libarchive\n",
-        "import libarchive"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "PeaSX9KXR58J"
-      },
-      "source": [
-        "# Install GraphViz & [PyDot](https://pypi.python.org/pypi/pydot)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 8,
+        "!python main.py"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "w9llCG2wSRDx",
-        "outputId": "4111a334-99bf-4738-f992-34550748b897"
+        "id": "U9gh2GouJkVw",
+        "outputId": "bc69ce67-2d80-46e7-9793-dc756e66da17"
       },
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[33mWARNING: Skipping numpy as it is not installed.\u001b[0m\u001b[33m\n",
-            "\u001b[0m\u001b[33mWARNING: Skipping pandas as it is not installed.\u001b[0m\u001b[33m\n",
-            "\u001b[0m\u001b[33mWARNING: Skipping yfinance as it is not installed.\u001b[0m\u001b[33m\n",
-            "\u001b[0m\u001b[33mWARNING: Skipping nsepython as it is not installed.\u001b[0m\u001b[33m\n",
-            "\u001b[0m\u001b[33mWARNING: Skipping pandas_ta as it is not installed.\u001b[0m\u001b[33m\n",
-            "\u001b[0m"
+            "--- STARTING TECHNO-FUNDA SCANNER v1.1 ---\n",
+            "\n",
+            "Scanning NETWEB.NS...\n",
+            "  -> Wait: Wait (Normal Activity: Vol Z:-0.19, Deliv:0.0%)\n",
+            "Scanning RELIANCE.NS...\n",
+            "  ❌ Fail (ROE: 9.7%, Debt: 0.36)\n",
+            "Scanning INFY.NS...\n",
+            "  -> Wait: Wait (Normal Activity: Vol Z:0.22, Deliv:0.0%)\n",
+            "Scanning TCS.NS...\n",
+            "  ❌ Downtrend (Price 3192 < SMA 3207)\n",
+            "\n",
+            "--- FINAL REPORT ---\n",
+            "      Ticker Action                                           Detail\n",
+            "0  NETWEB.NS   Wait  Wait (Normal Activity: Vol Z:-0.19, Deliv:0.0%)\n",
+            "1    INFY.NS   Wait   Wait (Normal Activity: Vol Z:0.22, Deliv:0.0%)\n"
           ]
         }
-      ],
-      "source": [
-        "!pip uninstall numpy pandas yfinance nsepython pandas_ta -y -q"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Tlh1MKxGrKFO"
-      },
-      "source": [
-        "# Install [cartopy](http://scitools.org.uk/cartopy/docs/latest/)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "id": "Zq68DSY2rP2W"
-      },
-      "outputs": [],
-      "source": [
-        "!pip install \"numpy<2.0\" yfinance nsepython -q"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "import yfinance as yf\n",
-        "from nsepython import *\n",
-        "import pandas as pd\n",
-        "\n",
-        "print(\"Installation Complete.\")\n",
-        "print(f\"Testing nsepython import: Success.\")\n",
-        "\n",
-        "# 3. Quick Data Test\n",
-        "print(\"Fetching Reliance Price...\")\n",
-        "data = yf.Ticker(\"RELIANCE.NS\").history(period=\"1d\")\n",
-        "print(f\"Current Price: {data['Close'].iloc[-1]:.2f}\")"
+        "!pip install nsepython yfinance \"numpy<2.0\" -q"
       ],
       "metadata": {
-        "id": "269T1OfYq3hj",
-        "outputId": "81cb2c09-2c4e-4b10-cd08-95c8677c0778",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "elq6gjObKuTb",
+        "outputId": "12c8464f-9600-49d9-d133-900f4c4a80e5"
       },
-      "execution_count": 3,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Installation Complete.\n",
-            "Testing nsepython import: Success.\n",
-            "Fetching Reliance Price...\n",
-            "Current Price: 1458.80\n"
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m61.0/61.0 kB\u001b[0m \u001b[31m2.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m18.0/18.0 MB\u001b[0m \u001b[31m90.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "shap 0.50.0 requires numpy>=2, but you have numpy 1.26.4 which is incompatible.\n",
+            "tobler 0.13.0 requires numpy>=2.0, but you have numpy 1.26.4 which is incompatible.\n",
+            "jax 0.7.2 requires numpy>=2.0, but you have numpy 1.26.4 which is incompatible.\n",
+            "rasterio 1.5.0 requires numpy>=2, but you have numpy 1.26.4 which is incompatible.\n",
+            "jaxlib 0.7.2 requires numpy>=2.0, but you have numpy 1.26.4 which is incompatible.\n",
+            "pytensor 2.36.3 requires numpy>=2.0, but you have numpy 1.26.4 which is incompatible.\n",
+            "opencv-contrib-python 4.12.0.88 requires numpy<2.3.0,>=2; python_version >= \"3.9\", but you have numpy 1.26.4 which is incompatible.\n",
+            "opencv-python-headless 4.12.0.88 requires numpy<2.3.0,>=2; python_version >= \"3.9\", but you have numpy 1.26.4 which is incompatible.\n",
+            "opencv-python 4.12.0.88 requires numpy<2.3.0,>=2; python_version >= \"3.9\", but you have numpy 1.26.4 which is incompatible.\u001b[0m\u001b[31m\n",
+            "\u001b[0m"
           ]
         }
       ]
