--- a/Snippets_Importing_libraries.ipynb
+++ b/Snippets_Importing_libraries.ipynb
@@ -9,12 +9,373 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/kushb2/Techno-Funda/blob/main/Snippets_Importing_libraries.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ==============================================================================\n",
+        "# PROJECT: TECHNO-FUNDA INSTITUTIONAL SCANNER (v2.0)\n",
+        "# OBJECTIVE: Identify Safe Stocks with Institutional Buying Momentum\n",
+        "# AUTHOR: You & Gemini\n",
+        "# ==============================================================================\n",
+        "\n",
+        "# ------------------------------------------------------------------------------\n",
+        "# TABLE OF CONTENTS\n",
+        "# ------------------------------------------------------------------------------\n",
+        "# 1. IMPORTS & SETUP ......... Library imports and environment checks\n",
+        "# 2. CONFIGURATION ........... Central control panel for all thresholds\n",
+        "# 3. DATA ENGINE ............. Handles yfinance and NSE connections\n",
+        "# 4. STRATEGY LAYERS ......... The 3-Step Filtering Logic\n",
+        "# 5. MAIN CONTROLLER ......... The execution loop and reporting\n",
+        "# ------------------------------------------------------------------------------\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "EPnetGiqSYRN",
+        "outputId": "2674c8f0-0023-47b2-e9bc-c3789cb84eac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: not a git repository (or any of the parent directories): .git\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Project starts\n"
+      ],
+      "metadata": {
+        "id": "gXEWQX8KTP9S"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Main"
+      ],
+      "metadata": {
+        "id": "YUK1LsG1T8hF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ==============================================================================\n",
+        "# 5. MAIN CONTROLLER (The \"Runner\")\n",
+        "# ==============================================================================\n",
+        "def run_scanner():\n",
+        "    print(f\"\\n{'='*40}\")\n",
+        "    print(f\"   TECHNO-FUNDA SCANNER (Running...)\")\n",
+        "    print(f\"{'='*40}\\n\")\n",
+        "\n",
+        "    results = []\n",
+        "\n",
+        "    for ticker in Config.WATCHLIST:\n",
+        "        # print(f\"Scanning {ticker}...\", end=\"\\r\") # Progress bar style\n",
+        "\n",
+        "        # 1. Fetch\n",
+        "        info, hist = fetch_data(ticker)\n",
+        "        if info is None: continue\n",
+        "\n",
+        "        # 2. Run Layers\n",
+        "        l1_pass, l1_msg = check_layer_1_safety(info)\n",
+        "        if not l1_pass:\n",
+        "            # results.append({\"Ticker\": ticker, \"Result\": \"❌ Fundamental Fail\", \"Detail\": l1_msg})\n",
+        "            continue # Skip bad stocks to keep report clean\n",
+        "\n",
+        "        l2_pass, l2_msg = check_layer_2_trend(hist)\n",
+        "        if not l2_pass:\n",
+        "            # results.append({\"Ticker\": ticker, \"Result\": \"❌ Downtrend\", \"Detail\": l2_msg})\n",
+        "            continue\n",
+        "\n",
+        "        l3_pass, l3_msg = check_layer_3_momentum(hist, ticker)\n",
+        "\n",
+        "        # 3. Final Decision\n",
+        "        status = \"✅ BUY SIGNAL\" if l3_pass else \"Wait\"\n",
+        "\n",
+        "        results.append({\n",
+        "            \"Ticker\": ticker,\n",
+        "            \"Result\": status,\n",
+        "            \"L3_Detail\": l3_msg\n",
+        "        })\n",
+        "\n",
+        "    # --- REPORTING ---\n",
+        "    print(\"\\n\" + \"=\"*40)\n",
+        "    print(\"       FINAL SHORTLIST\")\n",
+        "    print(\"=\"*40)\n",
+        "\n",
+        "    if results:\n",
+        "        df = pd.DataFrame(results)\n",
+        "        # Reorder columns\n",
+        "        print(df)\n",
+        "    else:\n",
+        "        print(\"No stocks passed the Safety + Trend filters.\")\n",
+        "\n",
+        "# Execute\n",
+        "if __name__ == \"__main__\":\n",
+        "    run_scanner()"
+      ],
+      "metadata": {
+        "id": "k5VzhVF7T-UT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# config\n"
+      ],
+      "metadata": {
+        "id": "LXdsT6VSTcG7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ==============================================================================\n",
+        "# 2. CONFIGURATION (The \"Brain\")\n",
+        "# ==============================================================================\n",
+        "class Config:\n",
+        "    # --- Watchlist (The 20-25 Stocks you track) ---\n",
+        "    # We mix some good ones and bad ones to test the filter\n",
+        "    WATCHLIST = [\n",
+        "         \"SUZLON.NS\"\n",
+        "    ]\n",
+        "\n",
+        "    # --- Layer 1: Safety (Fundamentals) ---\n",
+        "    MIN_MARKET_CAP_CR = 2000     # Reject Penny Stocks\n",
+        "    MAX_DEBT_TO_EQUITY = 1.5     # Relaxed slightly for capital intensive sectors\n",
+        "    MIN_ROE_PERCENT = 10.0       # Efficiency Check\n",
+        "\n",
+        "    # --- Layer 2: Trend (Technical) ---\n",
+        "    TREND_SMA_PERIOD = 200       # The Long Term Trend\n",
+        "    FALLBACK_SMA_PERIOD = 50     # For recent IPOs\n",
+        "\n",
+        "    # --- Layer 3: Smart Money (Momentum) ---\n",
+        "    VOLUME_LOOKBACK = 20         # 20 Days = 1 Trading Month\n",
+        "    Z_SCORE_THRESHOLD = 3.0      # 3 Sigma Event (Rare)\n",
+        "    DELIVERY_THRESHOLD = 40.0    # Minimum Delivery % to confirm \"Buying\"\n",
+        "\n",
+        "    # --- System ---\n",
+        "    SIMULATE_NSE = True          # Set False to try real NSE connection (Risk of blocking)\n"
+      ],
+      "metadata": {
+        "id": "Mugnwui4TfIv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Imports\n"
+      ],
+      "metadata": {
+        "id": "CPzuvz-fUG6F"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ==============================================================================\n",
+        "# 1. IMPORTS & SETUP\n",
+        "# ==============================================================================\n",
+        "import yfinance as yf\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import time\n",
+        "import sys\n",
+        "\n",
+        "# Try importing nsepython, handle gracefully if missing\n",
+        "try:\n",
+        "    from nsepython import nse_quote_ltp\n",
+        "except ImportError:\n",
+        "    nse_quote_ltp = None\n",
+        "    print(\"⚠️ NSEPython not found. Delivery data will be simulated.\")\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "lYD_Y8qgUJNh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# data engine"
+      ],
+      "metadata": {
+        "id": "kcCetr3YTlI1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ==============================================================================\n",
+        "# 3. DATA ENGINE (The \"Fetcher\")\n",
+        "# ==============================================================================\n",
+        "def fetch_data(ticker):\n",
+        "    \"\"\"\n",
+        "    Fetches 1 Month of history (optimal for Z-Score) and Basic Info.\n",
+        "    \"\"\"\n",
+        "    try:\n",
+        "        stock = yf.Ticker(ticker)\n",
+        "\n",
+        "        # 1. Fundamentals (Info) - Note: Fast on yfinance\n",
+        "        info = stock.info\n",
+        "\n",
+        "        # 2. Price History (1 Month) - Note: Fast and efficient\n",
+        "        # We need enough data for 20-day averages\n",
+        "        hist = stock.history(period=\"3mo\") # Fetch 3mo to be safe for 50SMA\n",
+        "\n",
+        "        if hist.empty: return None, None\n",
+        "        return info, hist\n",
+        "\n",
+        "    except Exception as e:\n",
+        "        # print(f\"  [Data Error] {ticker}: {e}\") # Uncomment for debug\n",
+        "        return None, None\n",
+        "\n",
+        "def get_delivery_percentage(ticker):\n",
+        "    \"\"\"\n",
+        "    Fetches Delivery % from NSE.\n",
+        "    Includes Simulation Mode to prevent crashes during dev.\n",
+        "    \"\"\"\n",
+        "    # 1. CLEAN TICKER\n",
+        "    sym = ticker.replace(\".NS\", \"\")\n",
+        "\n",
+        "    # 2. SIMULATION (For Development Stability)\n",
+        "    if Config.SIMULATE_NSE:\n",
+        "        # Return fake high numbers for specific stocks to test the BUY logic\n",
+        "        if sym in [\"NETWEB\", \"INFY\"]: return 55.5\n",
+        "        return 25.0\n",
+        "\n",
+        "    # 3. REAL DATA FETCH (Production)\n",
+        "    try:\n",
+        "        if nse_quote_ltp:\n",
+        "            data = nse_quote_ltp(sym)\n",
+        "            # NSE JSON structure varies, basic safety check\n",
+        "            if data and 'deliveryToTradedQuantity' in str(data):\n",
+        "                # Note: Parsing real NSE JSON requires precise key navigation\n",
+        "                # This is a simplified placeholder for the real logic\n",
+        "                return float(data.get('deliveryToTradedQuantity', 0))\n",
+        "        return 0.0\n",
+        "    except:\n",
+        "        return 0.0\n"
+      ],
+      "metadata": {
+        "id": "uopPGjUyTspE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# STRATEGY LAYERS"
+      ],
+      "metadata": {
+        "id": "2mrAGrlSTyJ4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ==============================================================================\n",
+        "# 4. STRATEGY LAYERS (The \"Logic\")\n",
+        "# ==============================================================================\n",
+        "def check_layer_1_safety(info):\n",
+        "    \"\"\"Filters for Fundamental Quality.\"\"\"\n",
+        "    try:\n",
+        "        mcap = info.get('marketCap', 0) / 10**7\n",
+        "        debt = info.get('debtToEquity', 999) / 100\n",
+        "        roe = info.get('returnOnEquity', 0) * 100\n",
+        "\n",
+        "        passed = (mcap > Config.MIN_MARKET_CAP_CR and\n",
+        "                  debt < Config.MAX_DEBT_TO_EQUITY and\n",
+        "                  roe > Config.MIN_ROE_PERCENT)\n",
+        "\n",
+        "        reason = f\"ROE:{roe:.1f}%, D/E:{debt:.2f}\"\n",
+        "        return passed, reason\n",
+        "    except:\n",
+        "        return False, \"Data Missing\"\n",
+        "\n",
+        "def check_layer_2_trend(hist):\n",
+        "    \"\"\"Filters for Uptrend (Price > SMA).\"\"\"\n",
+        "    try:\n",
+        "        # Smart SMA Selection\n",
+        "        period = Config.TREND_SMA_PERIOD if len(hist) > 200 else Config.FALLBACK_SMA_PERIOD\n",
+        "\n",
+        "        hist['SMA'] = hist['Close'].rolling(window=period).mean()\n",
+        "        price = hist['Close'].iloc[-1]\n",
+        "        sma = hist['SMA'].iloc[-1]\n",
+        "\n",
+        "        passed = price > sma\n",
+        "        reason = f\"Price {int(price)} vs SMA {int(sma)}\"\n",
+        "        return passed, reason\n",
+        "    except:\n",
+        "        return False, \"Calc Error\"\n",
+        "\n",
+        "def check_layer_3_momentum(hist, ticker):\n",
+        "    \"\"\"Detects Institutional Buying (Vol Z-Score + Delivery).\"\"\"\n",
+        "    try:\n",
+        "        # 1. Volume Stats (20 Day Lookback)\n",
+        "        window = Config.VOLUME_LOOKBACK\n",
+        "        vol_mean = hist['Volume'].rolling(window=window).mean().iloc[-1]\n",
+        "        vol_std = hist['Volume'].rolling(window=window).std().iloc[-1]\n",
+        "        curr_vol = hist['Volume'].iloc[-1]\n",
+        "\n",
+        "        if vol_std == 0: return False, \"Stable Vol\"\n",
+        "\n",
+        "        z_score = (curr_vol - vol_mean) / vol_std\n",
+        "\n",
+        "        # 2. Fetch Delivery\n",
+        "        deliv_pct = get_delivery_percentage(ticker)\n",
+        "\n",
+        "        # 3. Candle Color\n",
+        "        is_green = hist['Close'].iloc[-1] > hist['Open'].iloc[-1]\n",
+        "\n",
+        "        # 4. The Logic\n",
+        "        # Condition: High Volume AND High Delivery AND Green Candle\n",
+        "        # We lower Z-Score to 2.0 for testing so we see some results\n",
+        "        is_high_vol = z_score > 2.0\n",
+        "        is_high_deliv = deliv_pct > Config.DELIVERY_THRESHOLD\n",
+        "\n",
+        "        msg = f\"Z:{z_score:.1f}, Del:{deliv_pct}%\"\n",
+        "\n",
+        "        if is_high_vol and is_green and is_high_deliv:\n",
+        "            return True, f\"🚀 SNIPER BUY ({msg})\"\n",
+        "\n",
+        "        return False, f\"Wait ({msg})\"\n",
+        "\n",
+        "    except Exception as e:\n",
+        "        return False, f\"L3 Error {e}\"\n"
+      ],
+      "metadata": {
+        "id": "M1YkuHkET0QR"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "name": "Snippets: Importing libraries",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
